--- a/node/websocket-client-rtc.html
+++ b/node/websocket-client-rtc.html
@@ -13,6 +13,7 @@
 
     <video id="localVideo" autoplay playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
+
     <button id="showVideo">Open camera</button>
 
     <script>
@@ -23,50 +24,16 @@
         document.getElementById("messages").innerHTML +=
           "Message from server: " + event.data + "<br>";
       };
+      */
       socket.addEventListener("open", () => {
         console.log("We are connected");
       });
+      /*
       function sendMessage(event) {
         var inputMessage = document.getElementById("message");
         webSocket.send(inputMessage.value);
         inputMessage.value = "";
         event.preventDefault();
-      }
-      /*
-      const constraints = {
-        video: true,
-        audio: true,
-      };
-
-      async function videoHandler() {
-        try {
-          const stream = await navigator.mediaDevices.getUserMedia(constraints);
-          handleSuccess(stream);
-        } catch (e) {
-          handleError(e);
-        }
-      }
-      function handleSuccess(stream) {
-        const video = document.getElementById("localVideo");
-        //const videoTracks = stream.getVideoTracks();
-        //console.log("Got stream with constraints:", constraints);
-        //console.log(`Using video device: ${videoTracks[0].label}`);
-        //window.stream = stream; // make variable available to browser console
-        localVideo.srcObject = stream;
-        //makeCall(stream);
-
-        // Get user media
-        /*
-        navigator.mediaDevices
-          .getUserMedia(constraints) // Promise
-          .then((stream) => {
-            localVideo.srcObject = stream;
-            makeCall(stream);
-          })
-          .catch((error) => {
-            console.log("Couldn't open camera.", error);
-          });
-
       }
       */
       const constraints = (window.constraints = {
@@ -75,7 +42,7 @@
       });
 
       function handleSuccess(stream) {
-        const video = document.querySelector("video");
+        const video = document.querySelector("#localVideo");
         const videoTracks = stream.getVideoTracks();
         console.log("Got stream with constraints:", constraints);
         console.log(`Using video device: ${videoTracks[0].label}`);
@@ -128,32 +95,7 @@
           .forEach((localTrack) =>
             localPeerConnection.addTrack(localTrack, stream)
           );
-
-        console.log("Stream added to the connection");
-
-        // Listening for offers
-        /*
-        socket.onmessage = (event) => {
-          console.log(event);
-          document.getElementById("messages").innerHTML +=
-            "Message from server: " + event.data + "<br>";
-        };
-        socket.addEventListener("open", () => {
-          console.log("We are connected");
-        });
-        */
-        socket.addEventListener("message", async (message) => {
-          //console.log("Answer: ", message);
-          const data = JSON.parse(message.data);
-
-          if (data.type == 'answer') {
-            // Set this offer as remote description
-            await localPeerConnection.setRemoteDescription(
-              new RTCSessionDescription(data)
-            );
-            console.log("Remote description set");
-          }
-        });
+        console.log("Stream added to the connection: ", stream);
 
         // Create offer
         const localOffer = await localPeerConnection.createOffer();
@@ -164,32 +106,64 @@
 
         // Send offer
         socket.send(JSON.stringify({ type: 'offer', sdp: localOffer.sdp }));
+        console.log('This is localOffer: ', JSON.stringify({ type: 'offer', sdp: localOffer.sdp }));
         console.log("Local offer send");
+
+        // Listening for offers
+        socket.addEventListener("message", async (message) => {
+          
+          const data = JSON.parse(message.data);
+          console.log('Answer data: ', data);
+
+          if (data.type == 'answer') {
+            // Set this offer as remote description
+            await localPeerConnection.setRemoteDescription(
+              new RTCSessionDescription(data)
+            );
+            console.log("Remote description set");
+          }
+        });
+
+        // Listen for local ICE candidates on the local RTCPeerConnection
+        localPeerConnection.addEventListener("icecandidate", (event) => {
+          if (event.candidate) {
+            console.log(event.candidate);
+
+            socket.send(JSON.stringify(event.candidate));
+
+            //socket.send({ "new-ice-candidate": event.candidate });
+            console.log("Ice candidates send");
+          }
+        });
+        /*
+        // Listen for remote ICE candidates and add them to the local RTCPeerConnection
+
+        socket.addEventListener("message", async (message) => {
+
+          try {
+            const data = JSON.parse(message.data);
+            console.log(data.candidate);
+            if (data.candidate) {
+              try {
+                await localPeerConnection.addIceCandidate(data);
+              } catch (e) {
+                console.error("Error adding received ice candidate", e);
+              }
+            }
+          } catch (error) {
+            console.error('Error parsing JSON:', error);
+          }
+        });
+        */
       }
 
       const peerConnection = new RTCPeerConnection();
       console.log("RTCPeerConnection created");
 
-      /*
-      socket.onmessage = async (event) => {
-
-        const data = JSON.parse(event.data);
-        console.log(data.type);
-        //console.log(event.data.type);
-        if (data.type == 'offer') {
-          await peerConnection.setRemoteDescription(
-            new RTCSessionDescription(data)
-          );
-          console.log("Remote description set");
-          const answer = await peerConnection.createAnswer();
-          await peerConnection.setLocalDescription(answer);
-          console.log("Local description set");
-          socket.send({ answer: answer });
-        }
-      };
-      */
-
+      // Listening for offers
       socket.addEventListener("message", async (message) => {
+        const data = JSON.parse(message.data)
+        console.log('This is a message: ', data);
 
         try {
           if (isJSON(message.data)) {
@@ -203,7 +177,8 @@
               const answer = await peerConnection.createAnswer();
               await peerConnection.setLocalDescription(answer);
               console.log("Local description set");
-              socket.send({ answer: answer });
+              console.log('This is answer:', JSON.stringify({ type: 'answer', sdp: answer.sdp }));
+              socket.send(JSON.stringify({ type: 'answer', sdp: answer.sdp }));
             }
           } else {
             console.error('Invalid JSON format:', message.data);
@@ -214,6 +189,7 @@
         }
       });
 
+      /*
       // Listen for local ICE candidates on the local RTCPeerConnection
       peerConnection.addEventListener("icecandidate", (event) => {
         if (event.candidate) {
@@ -225,9 +201,8 @@
           console.log("Ice candidates send");
         }
       });
-
+      */
       // Listen for remote ICE candidates and add them to the local RTCPeerConnection
-      
       socket.addEventListener("message", async (message) => {
 
         try {
@@ -252,6 +227,15 @@
         }
       });
 
+      const remoteVideo = document.querySelector('#remoteVideo');
+
+      peerConnection.addEventListener('track', async (event) => {
+        const [remoteStream] = event.streams;
+        remoteVideo.srcObject = remoteStream;
+        console.log('Remote video added: ', remoteStream);
+      });
+
+
       function isJSON(str) {
         try {
           JSON.parse(str);
@@ -260,44 +244,6 @@
           return false;
         }
       }
-
-      /*
-      async function makeCall(stream) {
-        // Create an RTCPeerConnection
-        const localPeerConnection = new RTCPeerConnection();
-
-        // Add the local stream to the connection
-        stream
-          .getTracks()
-          .forEach((localTrack) =>
-            localPeerConnection.addTrack(localTrack, stream)
-          );
-
-        // Listening for offers
-        socket.addEventListener("message", (message) => {
-          console.log("Answer: ", message.data);
-
-          if (message.answer) {
-            // Set this offer as remote description
-            localPeerConnection.setRemoteDescription(
-              new RTCSessionDescription(message.answer)
-            );
-          }
-        });
-
-        // Create offer
-        const localOffer = await localPeerConnection.createOffer();
-
-        // Set that offer as local description
-        await localPeerConnection.setLocalDescription(localOffer);
-
-        // Send offer
-        socket.send(localOffer);
-      }
-      */
-      //document
-      //.getElementById("input-form-caller")
-      //.addEventListener("submit", sendMessage);
 
       document
         .querySelector("#showVideo")
