--- a/node/websocket-client-rtc.html
+++ b/node/websocket-client-rtc.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <h1>WebRTC</h1>
+  </head>
   <body>
-    <form id="input-form-caller">
-      <label for="message">Enter Message:</label>
-      <input type="text" id="message" name="message" /><br /><br />
-      <input type="submit" value="Send" />
-    </form>
 
     <div id="messages"></div>
     <div id="errorMsg"></div>
@@ -15,40 +12,37 @@
     <video id="remoteVideo" autoplay playsinline></video>
 
     <button id="showVideo">Open camera</button>
+    <button id="makeCall">Make call</button>
+    <button id="endCall" style="display: none">End call</button>
 
     <script>
       const socket = new WebSocket("ws://localhost:443/");
-      /*
-      socket.onmessage = (event) => {
-        console.log(event);
-        document.getElementById("messages").innerHTML +=
-          "Message from server: " + event.data + "<br>";
-      };
-      */
+
       socket.addEventListener("open", () => {
-        console.log("We are connected");
+        console.log("I am connected!");
       });
-      /*
-      function sendMessage(event) {
-        var inputMessage = document.getElementById("message");
-        webSocket.send(inputMessage.value);
-        inputMessage.value = "";
-        event.preventDefault();
-      }
-      */
+
       const constraints = (window.constraints = {
         audio: false,
         video: true,
       });
 
-      function handleSuccess(stream) {
-        const video = document.querySelector("#localVideo");
-        const videoTracks = stream.getVideoTracks();
-        console.log("Got stream with constraints:", constraints);
-        console.log(`Using video device: ${videoTracks[0].label}`);
-        window.stream = stream; // make variable available to browser console
-        video.srcObject = stream;
-        makeCall(stream);
+      async function openCamera(e) {
+        console.log('Im in the open camera function');
+        try {
+          const stream = await navigator.mediaDevices.getUserMedia(constraints);
+          const video = document.querySelector("#localVideo");
+          const videoTracks = stream.getVideoTracks();
+          console.log("Got stream with constraints:", constraints);
+          console.log(`Using video device: ${videoTracks[0].label}`);
+          window.stream = stream; // make variable available to browser console
+          video.srcObject = stream;
+          e.target.disabled = true;
+
+        } catch (e) {
+          console.log('e');
+          handleError(e);
+        }
       }
 
       function handleError(error) {
@@ -74,17 +68,7 @@
           console.error(error);
         }
       }
-
-      async function init(e) {
-        try {
-          const stream = await navigator.mediaDevices.getUserMedia(constraints);
-          handleSuccess(stream);
-          e.target.disabled = true;
-        } catch (e) {
-          handleError(e);
-        }
-      }
-
+      
       async function makeCall(stream) {
         // Create an RTCPeerConnection
         const localPeerConnection = new RTCPeerConnection();
@@ -95,7 +79,7 @@
           .forEach((localTrack) =>
             localPeerConnection.addTrack(localTrack, stream)
           );
-        console.log("Stream added to the connection: ", stream);
+        console.log("Stream on client 1 side added to the connection: ", stream);
 
         // Create offer
         const localOffer = await localPeerConnection.createOffer();
@@ -130,79 +114,94 @@
             console.log(event.candidate);
 
             socket.send(JSON.stringify(event.candidate));
-
-            //socket.send({ "new-ice-candidate": event.candidate });
             console.log("Ice candidates send");
           }
         });
-        /*
-        // Listen for remote ICE candidates and add them to the local RTCPeerConnection
 
-        socket.addEventListener("message", async (message) => {
-
-          try {
-            const data = JSON.parse(message.data);
-            console.log(data.candidate);
-            if (data.candidate) {
-              try {
-                await localPeerConnection.addIceCandidate(data);
-              } catch (e) {
-                console.error("Error adding received ice candidate", e);
-              }
-            }
-          } catch (error) {
-            console.error('Error parsing JSON:', error);
+        // Listen for connectionstatechange on the local RTCPeerConnection
+        localPeerConnection.addEventListener("connectionstatechange", (event) => {
+          if (localPeerConnection.connectionState === "connected") {
+            console.log("Peers connected from client 1 side!");
+            const callButton = document.querySelector("#makeCall");
+            callButton.style.display = "none";
+            const endButton = document.querySelector("#endCall");
+            endButton.style.display = "block";
           }
         });
-        */
+
+        // Adding remote video
+        const remoteVideo = document.querySelector('#remoteVideo');
+
+        localPeerConnection.addEventListener("track", async (event) => {
+          const [remoteStream] = event.streams;
+          remoteVideo.srcObject = remoteStream;
+          console.log('Remote video added: ', remoteStream);
+        });
+
+        // Disconnection check
+        localPeerConnection.addEventListener("connectionstatechange", (event) => {
+          if (localPeerConnection.connectionState === "disconnected") {
+            console.log("Peer connection closed!");
+            localPeerConnection.close();
+            const makeCallButton = document.querySelector("#makeCall");
+            makeCallButton.style.display = "block";
+            const endCallButton = document.querySelector("#endCall");
+            endCallButton.style.display = "none";
+            //const remoteVideoElement = document.querySelector("#remoteVideo");
+            //remoteVideoElement.style.display = "none";
+            //restoreRTC();
+          }
+        });
+
+        // End call
+        document
+          .querySelector("#endCall")
+          .addEventListener("click", () => {
+            localPeerConnection.close();
+            console.log("Peer connection closed!");
+            const makeCallButton = document.querySelector("#makeCall");
+            makeCallButton.style.display = "block";
+            const endCallButton = document.querySelector("#endCall");
+            endCallButton.style.display = "none";
+            //const remoteVideoElement = document.querySelector("#remoteVideo");
+            //remoteVideoElement.style.display = "none";
+            //restoreRTC();
+          });
       }
 
+      // CLIENT 2
+      // Create an RTCPeerConnection
       const peerConnection = new RTCPeerConnection();
       console.log("RTCPeerConnection created");
+
 
       // Listening for offers
       socket.addEventListener("message", async (message) => {
         const data = JSON.parse(message.data)
         console.log('This is a message: ', data);
 
-        try {
-          if (isJSON(message.data)) {
-            const data = JSON.parse(message.data);
+        if (data.type == 'offer') {
+          // Add the stream to the connection
+          stream
+            .getTracks()
+            .forEach((localTrack) =>
+              peerConnection.addTrack(localTrack, stream)
+            );
+          console.log("Stream on client 2 side added to the connection: ", stream);
 
-            if (data.type == 'offer') {
-              await peerConnection.setRemoteDescription(
-                new RTCSessionDescription(data)
-              );
-              console.log("Remote description set");
-              const answer = await peerConnection.createAnswer();
-              await peerConnection.setLocalDescription(answer);
-              console.log("Local description set");
-              console.log('This is answer:', JSON.stringify({ type: 'answer', sdp: answer.sdp }));
-              socket.send(JSON.stringify({ type: 'answer', sdp: answer.sdp }));
-            }
-          } else {
-            console.error('Invalid JSON format:', message.data);
-            // Handle the error as needed for invalid JSON format
-          }
-        } catch (error) {
-          console.error('Error parsing JSON:', error);
+          // Set remote descripton
+          await peerConnection.setRemoteDescription(
+            new RTCSessionDescription(data)
+          );
+          console.log("Remote description set");
+          const answer = await peerConnection.createAnswer();
+          await peerConnection.setLocalDescription(answer);
+          console.log("Local description set");
+          console.log('This is answer:', JSON.stringify({ type: 'answer', sdp: answer.sdp }));
+          socket.send(JSON.stringify({ type: 'answer', sdp: answer.sdp }));
         }
       });
 
-      /*
-      // Listen for local ICE candidates on the local RTCPeerConnection
-      peerConnection.addEventListener("icecandidate", (event) => {
-        if (event.candidate) {
-          console.log(event.candidate);
-          
-          socket.send(JSON.stringify(event.candidate));
-
-          //socket.send({ "new-ice-candidate": event.candidate });
-          console.log("Ice candidates send");
-        }
-      });
-      */
-      // Listen for remote ICE candidates and add them to the local RTCPeerConnection
       socket.addEventListener("message", async (message) => {
 
         try {
@@ -220,10 +219,14 @@
         }
       });
 
-      // Listen for connectionstatechange on the local RTCPeerConnection
+      // Listen for connectionstatechange
       peerConnection.addEventListener("connectionstatechange", (event) => {
         if (peerConnection.connectionState === "connected") {
-          console.log("Peers connected!");
+          console.log("Peers connected from client 2 side!");
+          const callButton = document.querySelector("#makeCall");
+          callButton.style.display = "none";
+          const endButton = document.querySelector("#endCall");
+          endButton.style.display = "block";
         }
       });
 
@@ -235,19 +238,52 @@
         console.log('Remote video added: ', remoteStream);
       });
 
-
-      function isJSON(str) {
-        try {
-          JSON.parse(str);
-          return true;
-        } catch (e) {
-          return false;
-        }
+      // Disconnection check
+      peerConnection.addEventListener("connectionstatechange", (event) => {
+          if (peerConnection.connectionState === "disconnected") {
+            console.log("Peer connection closed!");
+            peerConnection.close();
+            const makeCallButton = document.querySelector("#makeCall");
+            makeCallButton.style.display = "block";
+            const endCallButton = document.querySelector("#endCall");
+            endCallButton.style.display = "none";
+            //const remoteVideoElement = document.querySelector("#remoteVideo");
+            //remoteVideoElement.style.display = "none";
+            restoreRTC();
+          }
+      });
+      /*
+      async function restoreRTC(){
+        const peerConnection = new RTCPeerConnection();
+        console.log("RTCPeerConnection created. Ready for new one.");
+        const remoteVideoElement = document.querySelector("#remoteVideo");
+        remoteVideoElement.style.display = "block";
       }
-
+        */    
       document
         .querySelector("#showVideo")
-        .addEventListener("click", (e) => init(e));
+        .addEventListener("click", (e) => {
+          const stream = openCamera(e);
+        });
+
+      document
+        .querySelector("#makeCall")
+        .addEventListener("click", () => makeCall(stream));
+
+      document
+        .querySelector("#endCall")
+        .addEventListener("click", () => {
+          peerConnection.close();
+          console.log("Peer connection closed!");
+          const makeCallButton = document.querySelector("#makeCall");
+          makeCallButton.style.display = "block";
+          const endCallButton = document.querySelector("#endCall");
+          endCallButton.style.display = "none";
+          //const remoteVideoElement = document.querySelector("#remoteVideo");
+          //remoteVideoElement.style.display = "none";
+          //restoreRTC();
+        });
+
     </script>
   </body>
 </html>
