--- a/Example/index.html
+++ b/Example/index.html
@@ -63,7 +63,7 @@
 
       <p>
         The <code>MediaStream</code> object <code>stream</code> passed to the
-        <code>getUserMedia()</code> callback is in global scope, so you can
+        <code>getUserMedia()</code> callbck is in global scope, so you can
         inspect it from the console.
       </p>
 
