--- a/node/public/index.html
+++ b/node/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>WebRTC App</title>
-    <h1>WebRTC</h1>
+    <h1>WebRTC Video Calling</h1>
   </head>
   <body>
     <div>
@@ -19,7 +19,7 @@
 
       <form id="form" onsubmit="sendCallRequest(); return false;">
         <br />
-        <label for="userID">Receiver user ID:</label>
+        <label for="userID">Receiver's user ID:</label>
         <input type="text" name="receiverID" required />
 
         <input type="submit" value="Make Call" />
